<resources>

    <string name="app_name">L3Demo</string>

    <string name="request_consume">SALE</string>
    <string name="request_consume_revoke">VOID</string>
    <string name="request_return_goods">REFUND</string>
    <string name="request_pre_auth">PRE AUTH</string>
    <string name="request_pre_revoke">PRE AUTH VOID</string>
    <string name="request_pre_complete">SALE COMPLETE</string>
    <string name="request_pre_complete_revoke">SALE COMPLETE VOID</string>

    <string name="request_sign">LOGON</string>
    <string name="request_sign_out">LOGOFF</string>
    <string name="request_balance">BALANCE</string>
    <string name="request_settlement">SETTLEMENT</string>

    <string name="request_print">PRINT</string>
    <string name="request_custom">CUSTOM</string>
    <string name="request_system_manager">SYSTEM MANAGER</string>
    <string name="request_query_merchant">Inquiry merchant info</string>
    <string name="request_query_trade_local">Inquiry transaction by LOCAL</string>
    <string name="request_query_trade_online">Inquiry transaction by ONLINE</string>

    <string name="pay_scan_and_scan">SCAN</string>
    <string name="pay_bank_card">Bank Card</string>
    <string name="pay_wx_scan">WeChat Scan</string>
    <string name="pay_wx_code">WeChat Code</string>
    <string name="pay_aliPay_scan">AliPay Scan</string>
    <string name="pay_aliPay_code">AliPay Code</string>
    <string name="pay_union_scan">UnionPay Scan</string>
    <string name="pay_union_code">UnionPay Code</string>
    <string name="pay_user_optional">USER OPTIONAL</string>

    <string name="input_select_mode_payment">Select Payment Type</string>
    <string name="input_app_id">PackageName (M)</string>
    <string name="input_trans_id">Trans ID  (O)</string>
    <string name="input_trans_type">Trans Type (O)</string>
    <string name="input_payment_type">Payment Type (O)</string>
    <string name="input_money">Amount (O unit: cent)</string>
    <string name="input_ori_date">ORI Date (O Format: 0229)</string>
    <string name="input_ori_auth">ORI AUTH NO (O)</string>
    <string name="input_ori_voucher">ORI VOU NO (O)</string>
    <string name="input_ori_qr_order">ORI ORDER NO (O)</string>
    <string name="input_ori_reference">ORI REF NO or SCAN ORDER NO(O)</string>
    <string name="input_ori_third_order">ORI THIRD ORDER NO (O)</string>

    <string name="input_change_print_title">Change print title (O)</string>

    <string name="ok">OK</string>

    <string name="footer_print">Print Receipt</string>
    <string name="footer_admin_pwd">Input Admin Password</string>
    <string name="footer_settlement_detail">Return Settlement Detail</string>

    <string name="footer_transaction_last">Last Transaction</string>
    <string name="footer_transaction_last_hint">Type 0: No Card 1: Card 2: AliPay 3: WeChat 4: UnionPay</string>

    <string name="footer_query_hint"> </string>

    <string name="footer_print_hint"> </string>
    <string name="footer_print_no">No Show Print Preview</string>

    <string name="footer_user">User receipt added print (O)</string>
    <string name="footer_user_code">User receipt added code (O)</string>
    <string name="footer_merchant">Merchant receipt added print (O)</string>
    <string name="footer_merchant_code">Merchant receipt added code (O)</string>

    <string name="web_socket">WebSocket Setting</string>
    <string name="web_socket_ip">IP</string>
    <string name="web_socket_port">PORT</string>
    <string name="web_socket_connect">Connect</string>
    <string name="web_socket_failed">Connect WebSocket Service Failed</string>
    <string name="web_socket_success">Connect WebSocket Service Successful</string>

    <string name="error_network">Error network</string>
    <string name="error_timeout">Connect timeout</string>
    <string name="error_printer">The printer is abnormal, please check</string>

</resources>
