<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/input_select_mode_payment"
            android:textColor="#969696"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_user_optional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_user_optional"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_bank_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pay_bank_card"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_aliPay_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_aliPay_scan"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_aliPay_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_aliPay_code"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/rb_weChat_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_wx_scan"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_weChat_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_wx_code"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/rb_union_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_union_scan"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_union_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_union_code"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_scan_and_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_scan_and_scan"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="visible" />

        </RadioGroup>

        <EditText
            android:id="@+id/edit_input_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_money"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#ff6900"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_input_trans_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_trans_id"
            android:textColor="#000000"
            android:textColorHint="#ff6900"
            android:textSize="14sp" />

        <include layout="@layout/include_add_print_footer" />

        <include layout="@layout/include_add_payment_channel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</ScrollView>