<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/input_select_mode_payment"
            android:textColor="#999999"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/mode_payment_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/input_select_mode_payment"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/bank_card_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pay_bank_card"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/aliPay_scan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_aliPay_scan"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/aliPay_code_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_aliPay_code"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/weChat_scan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_wx_scan"
                android:textColor="#000000"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/weChat_code_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_wx_code"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/optional_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_user_optional"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/union_scan_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_union_scan"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/input_ori_reference_no"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ori_reference_no_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_ori_reference_no"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/input_ori_date"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/ori_date_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_ori_date"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/input_money"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/input_money_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_money"
            android:inputType="number"
            android:maxLength="9"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="用户联追加打印"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="用户联追加打印"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="用户联追加二维码"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_user_code_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="用户联追加二维码"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="商户联追加打印"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_merchant_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="商户联追加打印"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="商户联追加二维码"
            android:textColor="#999999"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/et_merchant_code_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="商户联追加二维码"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cb_manage_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="是否输入管理员密码"
            android:textColor="#000000"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/cb_code_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="二维码是否打印小票"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</ScrollView>